# SentimentDisaster

./: .gitignore  README.md  apitest.py  geocode.py  kepler.py  labeled_sentiment_data.csv  location_extractor.py  mongabay_search.html  preciselocation.py  pyproject.toml  regex.py  sentiment.py  sentiment_map.py  svm_sentiment_model.pkl  tfidf_vectorizer.pkl
clean/: processed_Klungkung_Badai_CNN.csv  processed_Klungkung_Badai_Detik.csv  processed_Klungkung_Badai_Mongabay.csv  processed_Klungkung_Banjir_CNN.csv  processed_Klungkung_Banjir_Detik.csv  processed_Klungkung_Banjir_Mongabay.csv  processed_Klungkung_Erupsi_CNN.csv  processed_Klungkung_Erupsi_Detik.csv  processed_Klungkung_Erupsi_Mongabay.csv  processed_Klungkung_Gempa_CNN.csv  processed_Klungkung_Gempa_Detik.csv  processed_Klungkung_Longsor_CNN.csv  processed_Klungkung_Longsor_Detik.csv  processed_Klungkung_Longsor_Mongabay.csv  processed_Tabanan_Badai_Detik.csv  processed_Tabanan_Banjir_CNN.csv  processed_Tabanan_Banjir_Detik.csv  processed_Tabanan_Erupsi_Detik.csv  processed_Tabanan_Gempa_Detik.csv  processed_Tabanan_Longsor_Detik.csv
geojson/: unified_map_refined.geojson  unified_map_with_sentiment.geojson
news_scraper/: settings.py
random_forest/: main_rf_pipeline.py
raw_old/: Klungkung_Badai_CNN.csv  Klungkung_Badai_Mongabay.csv  Klungkung_Banjir_CNN.csv  Klungkung_Banjir_Mongabay.csv  Klungkung_Erupsi_CNN.csv  Klungkung_Erupsi_Mongabay.csv  Klungkung_Gempa_CNN.csv  Klungkung_Gempa_Mongabay.csv  Klungkung_Longsor_CNN.csv  Klungkung_Longsor_Mongabay.csv  Tabanan_Badai_CNN.csv  Tabanan_Banjir_CNN.csv  (+1 more)
(+2 files in other folders)
